新增 练习题-边框阴影完成

--- a/前端/day-01/表单练习.html
+++ b/前端/day-01/表单练习.html
@@ -21,7 +21,7 @@
     <form action="" method="post" enctype="multipart/form-data">
         <!--
             表单控件
-                type:指定我们吃的表单类型(普通文本  密码框   单选框  多选框)
+                type:指定我们此项目表单类型(普通文本  密码框   单选框  多选框)
                 必须要填写 name属性
                 value :设置默认值
          {username:1234,sex:0,love:[l,z,p],xl:0}-->
