--- a/前端/day04css/5.html
+++ b/前端/day04css/5.html
@@ -20,11 +20,11 @@
                         如果不设置内阴影可以不写
 
             */
-            /*box-shadow:-10px -10px 20px 10px red inset;*/
+            box-shadow:0px 0px 20px 10px red insert;
 
         }
-        .box:hover{
-            box-shadow:10px 10px 20px 10px #ccc;
+        /*.box:hover{
+            box-shadow:10px 10px 20px 10px #ccc;*/
         }
     </style>
 </head>
