--- a/前端/day09js/JS流程控制、循环、元素操作.html
+++ b/前端/day09js/JS流程控制、循环、元素操作.html
@@ -124,27 +124,47 @@
     <script>
     // JS 获取元素 可以使用内置对象的document的getElementById的方法，来获取网页上设置有id元素
         window.onload=function () {
-            // 获取元素方法
+            // JS获取元素方法
             var oDiv = document.getElementById('item1');
             console.log(oDiv);
 
-            // 对元素的操作， 通过使用以 标签对象.style.css（属性名）="值" 形式改变标签对象的样式，l从而实现元素的操作
+            // JS对元素的样式的操作， 通过使用以 标签对象.style.css（属性名）="值" 形式改变标签对象的样式，l从而实现元素的操作
             /*
              1、样式是加在行间的(js添加的样式优先级高)
              2、注意在设置样式的时候,如果有些属性是双拼词 font-size 要把中横岗去掉  第二个单词首字母大写
               */
-            oDiv.style.width = '200px';
+            oDiv.style.width = '1000px';
             oDiv.style.height = '300px';
-            oDiv.style.backgroundColor = 'red';
+            oDiv.style.backgroundColor = 'yellow';
             oDiv.style.fontSize = '40px';
 
-            //通过jss获取元素的样式 只能获取行间样式
+            // JS获取元素的样式 只能获取行间样式
             console.log(oDiv.style.width);
 
-            
+            // JS操作元素的文本内容
+            /*
+            1、innerHTML 一般用来设置内容 可以解析标签 获取内容时会连同标签一起获取,
+            2、innerText 一般只用来获取内容 解析不了标签 只能获取文本不能获取标签
+            3、注意会覆盖原来的内容
 
+             */
+            oDiv.innerHTML = '<h2>innerHTML获取元素的内容，并覆盖元素原始的内容</h2>';
+            console.log(oDiv.innerHTML);
+            //oDiv.innerText ='<h1>444</h1>';
+            console.log(oDiv.innerText);
+
+            // JS操作表单值
+                // 通过id获取表单元素对象
+            oFrom1 =document.getElementById('userid');
+            console.log(oFrom1);
+                // 获取表单的值 格式为：元素对象.value
+            console.log(oFrom1.value);
+                // 修改表单的值 格式为：元素对象.value='要设置的值'
+            oFrom1.value = '789';
+            console.log(oFrom1.value);
         }
     </script>
 <div id="item1" style="">123</div>
+<input type="text" value="456" name="username" id="userid">
 </body>
 </html>
