补交正确内容

--- a/前端/day09js/JS流程控制、循环、元素操作.html
+++ b/前端/day09js/JS流程控制、循环、元素操作.html
@@ -164,7 +164,7 @@
             console.log(oFrom1.value);
         }
     </script>
-<div id="item1" style="">123</div>
+<div id="item1" style="">123ixinzengneirong</div>
 <input type="text" value="456" name="username" id="userid">
 </body>
 </html>
