--- a/前端/day09js/JS流程控制、循环、元素操作.html
+++ b/前端/day09js/JS流程控制、循环、元素操作.html
@@ -127,24 +127,48 @@
             // 获取元素方法
             var oDiv = document.getElementById('item1');
             console.log(oDiv);
+            var oDiv2 = document.getElementById('item2');
 
             // 对元素的操作， 通过使用以 标签对象.style.css（属性名）="值" 形式改变标签对象的样式，l从而实现元素的操作
             /*
              1、样式是加在行间的(js添加的样式优先级高)
              2、注意在设置样式的时候,如果有些属性是双拼词 font-size 要把中横岗去掉  第二个单词首字母大写
               */
-            oDiv.style.width = '200px';
+            oDiv.style.width = '800px';
             oDiv.style.height = '300px';
             oDiv.style.backgroundColor = 'red';
             oDiv.style.fontSize = '40px';
 
+            oDiv2.style.width = '800px';
+            oDiv2.style.height = '300px';
+            oDiv2.style.backgroundColor = 'yellow';
+            oDiv2.style.fontSize = '40px';
+
+
             //通过jss获取元素的样式 只能获取行间样式
             console.log(oDiv.style.width);
 
-            
+            //JS操作元素的文本内容
+            /*
+            1、innerHTML 获取元素的文本内容，同时能解析标签
+            2、innerText 获取元素的文本内容，不能解析标签
+            3、新赋值的文本内容会覆盖原始文本内容
+             */
+            oDiv.innerHTML = '<h2>innerHTML赋值文本新内容，同时解析标签</h2>';
+            oDiv2.innerText ='<h2>innerText赋值文本新内容，标签<h2>不能被解析</h2>, ';
+
+            // JS操作表单值
+                // 通过ID获取表单元素对象
+            getFormId= document.getElementById('userid');
+                // 获取表单id值 格式为； 元素对象.value
+            console.log(getFormId.value);
+                // 重新赋值给表单ID值 格式为: 元素对象.value='赋值给ID的值'
+            console.log(getFormId.value='789adsfg');
 
         }
     </script>
 <div id="item1" style="">123aaaa</div>
+<div id="item2" style="">123aaaa</div>
+<input type="text" value="456" id="userid">
 </body>
 </html>
