添加jQuery文件路径

--- a/前端/day15jQuery/day15jQuery/2.html
+++ b/前端/day15jQuery/day15jQuery/2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>节点操作</title>
-    <script src="../day14jQuery/jquery-1.8.3.min.js"></script>
+    <script src="./jquery-1.8.3.min.js"></script>
     <style>
         *{margin:0;padding:0}
         .wrap{
@@ -32,6 +32,7 @@
     <div class="wrap"></div>
 
     <script>
+        console.log($);
         var oDiv=null;
         // 绑定事件
         // 在元素内部的尾部插入元素 append()  appendTo()
